#11 Made everything but nr. 5 inside the TODO.md, which is under orderService folder
