# services/orderService/handlers/order_handler.go
@@ -6,6 +6,7 @@ import (
 	"log"
 	"net/http"
 	"strconv"
+	"time"
 
 	"github.com/jackc/pgx/v5/pgtype"
 	"github.com/rasm445f/soft-exam-2/broker"
@@ -22,6 +23,7 @@ func NewOrderHandler(domain *domain.OrderDomain) *OrderHandler {
 }
 
 // GetAllOrders godoc
+//
 // @Summary Get all orders
 // @Description Fetches a list of all orders from the database
 // @Tags orders
@@ -47,6 +49,7 @@ func (h *OrderHandler) GetAllOrders() http.HandlerFunc {
 }
 
 // GetOrderById godoc
+//
 // @Summary Get order by id
 // @Description Fetches an order based on the id from the database
 // @Tags orders
@@ -84,7 +87,75 @@ func (h *OrderHandler) GetOrderById() http.HandlerFunc {
 	}
 }
 
+type UpdateOrderStatusRequest struct {
+		Status     string   `json:"status" example:"Pending/On its way/Delivered"`
+}
+// UpdateOrderStatus godoc
+//
+// @Summary Update Order Status
+// @Description Updates the status of an order
+// @Tags orders
+// @Accept application/json
+// @Produce application/json
+// @Param orderId path int true "Order ID"
+// @Param status body UpdateOrderStatusRequest true "New Order Status"
+// @Success 200 {string} string "Order status updated successfully"
+// @Failure 404 {string} string "Order not found"
+// @Router /api/order/status/{orderId} [patch]
+func (h *OrderHandler) UpdateOrderStatus() http.HandlerFunc {
+	return func (w http.ResponseWriter, r *http.Request) {
+		ctx := r.Context()
+
+		orderIdStr := r.PathValue("orderId")
+		orderId, err := strconv.Atoi(orderIdStr)
+		if err != nil {
+			http.Error(w, "Invalid Order ID", http.StatusBadRequest)
+			return
+		}
+
+		// Parse the new status from the request body
+		var requestPayload struct {
+			Status string `json:"status"`
+		}
+		if err := json.NewDecoder(r.Body).Decode(&requestPayload); err != nil {
+			http.Error(w, "Invalid request body", http.StatusBadRequest)
+			return
+		}
+
+		// Validate the new status
+		validStates := []string{"Pending", "On its way", "Delivered"}
+		isValid := false
+		for _, validStatus := range validStates {
+			if requestPayload.Status == validStatus {
+				isValid = true
+				break
+			}
+		}
+		if !isValid {
+			http.Error(w, "Invalid status value, you can only choose between: Pending/On its way/Delivered", http.StatusBadRequest)
+			return
+		}
+
+		// Call the domain fucntion to update the order status
+		err = h.domain.UpdateOrderStatus(ctx, int32(orderId), requestPayload.Status)
+		if err != nil {
+			if err.Error() == "order not found" {
+				http.Error(w, "Order not found", http.StatusNotFound)
+			} else {
+				http.Error(w, "Failed to update order status", http.StatusInternalServerError)
+			}
+			return
+		}
+
+		// Respond with success
+		w.WriteHeader(http.StatusOK)
+		w.Write([]byte(`{"message": "Order status updated successfully}`))
+	}
+}
+
+
 // DeleteOrder godoc
+//
 // @Summary Delete an order
 // @Description Deletes an order by its id from the database
 // @Tags orders
@@ -127,35 +198,25 @@ func (h *OrderHandler) DeleteOrder() http.HandlerFunc {
 
 
 
-
-
-
-
-
-
-
 /* BROKER */
 
-type IntermediatePayload struct {
-	CustomerId   int `json:"customerId"`
-	MenuItemId   int `json:"menuItemId"`
-	Quantity     int `json:"quantity"`
-	RestaurantId int `json:"restaurantId"`
-}
-
-// Helper function
+// Helper functions
 func int32Ptr(i int) *int32 {
 	value := int32(i)
 	return &value
 }
+func toTimeNowPtr() *time.Time {
+	now := time.Now()
+	return &now
+}
 
-// Consume godoc
+// ConsumeOrder godoc
 //
-//	@Summary		View order for a customer
+//	@Summary		Consume Order for a Customer
 //	@Description	Consume the created order for customer
 //	@Tags			order
 //	@Produce		application/json
-//	@Success		200	{string}	string	"Order Consume Success"
+//	@Success		200	{string}	string	"Order Consumed Successfully"
 //	@Failure		400	{string}	string	"Bad request"
 //	@Failure		500	{string}	string	"Internal server error"
 //	@Router			/api/order/consume [get]
@@ -196,7 +257,7 @@ func (h *OrderHandler) ConsumeOrder() http.HandlerFunc {
 				Totalamount: payload.Totalamount,
 				Vatamount: payload.Vatamount,
 				Status: "Pending",
-				// Timestamp: time.Now(),
+				Timestamp: toTimeNowPtr(),
 				Comment: &payload.Comment,
 				Customerid: int32Ptr(payload.Customerid),
 				Restaurantid: int32Ptr(payload.Restaurantid),
